# SistemasDistribuidos

./: CMakeLists.txt  filemanager.cpp  filemanager.h  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  httpserver.cpp  httpserver.h  main.cpp  main_filemanager.cpp  main_fm.cpp  main_remotefile.cpp  main_slave.cpp  mpi_manager.cpp  mpi_manager.h  pruebaclase.cpp  pruebaclase.h  pruebaclase_imp.cpp  pruebaclase_imp.h  pruebaclase_stub.cpp  pruebaclase_stub.h  remotefile.cpp  remotefile.h  remotefile_imp.cpp  remotefile_imp.h  remotefile_stub.cpp  remotefile_stub.h  utils.cpp  utils.h
html_dir/: index.html  services.html  services_template.html  styles.css
